<resources>
    <string name="app_name">DemoGiaoDienDangNhap</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="itclass">Khóa học trực tuyến itclass.vn</string>
    <string name="signinwith"> Sign in with</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="forgotpassword">I\'ve forgotten my password</string>
    <string name="login">Log in</string>

</resources>
